# rtt

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BTC_UPDOWN_5M.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  DEPLOY_IRELAND.md  IMPLEMENTATION_LOG.md  PLAN.md  SESSION_8_FIRST_LIVE_TRADE.md  SESSION_9_HARDEN.md  config.toml  state.json
.claude/: settings.local.json
cmake/: Dependencies.cmake
crates/pm-data/: Cargo.toml  README.md
crates/pm-data/src/: feed.rs  lib.rs  market_registry.rs  orderbook.rs  pipeline.rs  reference_store.rs  registry_provider.rs  snapshot.rs  subscription_plan.rs  types.rs  ws.rs
crates/pm-data/tests/: test_integration.rs  test_live_data.rs  test_orderbook_lifecycle.rs  test_types.rs  test_ws_debug.rs  test_ws_parse.rs
crates/pm-executor/: Cargo.toml  README.md
crates/pm-executor/src/: alert.rs  analysis_store.rs  bridge.rs  btc5m.rs  capital.rs  config.rs  execution.rs  health.rs  health_server.rs  journal.rs  logging.rs  main.rs  order_manager.rs  order_state.rs  safety.rs  state.rs  user_feed.rs
crates/pm-executor/tests/: test_full_pipeline.rs  test_integration.rs
crates/pm-strategy/: Cargo.toml  README.md
crates/pm-strategy/src/: backtest.rs  config.rs  lib.rs  liquidity_rewards.rs  quote.rs  reward_math.rs  runner.rs  runtime.rs  spread.rs  strategy.rs  threshold.rs  types.rs
crates/pm-strategy/tests/: backtest_contract_test.rs  backtest_test.rs  config_test.rs  requirements_test.rs  runner_test.rs  runtime_contract_test.rs  runtime_test.rs  spread_test.rs  strategy_trait_test.rs  test_strategy_scenarios.rs  threshold_test.rs  trigger_contract_test.rs  types_test.rs
crates/rtt-bench/: Cargo.toml
crates/rtt-bench/src/: main.rs
crates/rtt-core/: Cargo.toml  README.md
crates/rtt-core/benches/: clob_cpu_paths.rs
crates/rtt-core/src/: benchmark.rs  clob_auth.rs  clob_executor.rs  clob_order.rs  clob_request.rs  clob_response.rs  clob_signer.rs  clock.rs  connection.rs  executor.rs  feed_source.rs  h3_stub.rs  hot_state.rs  lib.rs  market.rs  metrics.rs  polymarket.rs  public_event.rs  queue.rs  request.rs  trigger.rs
crates/rtt-core/tests/: test_benchmark_pipeline.rs  test_connection_pipeline.rs  test_execution_pipeline.rs  test_h3_stub.rs  test_order_pipeline.rs  test_polymarket_endpoints.rs
pm-data/: Cargo.toml  IMPLEMENTATION_LOG.md
pm-data/src/: pipeline.rs  types.rs  ws.rs
pm-strategy/: Cargo.toml  IMPLEMENTATION_LOG.md
pm-strategy/src/: config.rs  spread.rs  types.rs
pm-strategy/tests/: spread_test.rs
research/: btc-up-down-markets.md  market-maker-rewards.md  master-strategy.md  weather-markets.md
scripts/: fire.sh
specs/: 01-ws-reconnect-resubscribe.md  02-dynamic-pricing.md  03-release-build-test.md  04-credential-validation-e2e.md  05-circuit-breaker-tuning.md  06-circuit-breaker-alerting.md  07-state-persistence.md  08-health-endpoint.md  09-rtt-core-refactor.md  10-rtt-core-cleanup.md  11-market-universe-and-feed-plane.md  11a-market-foundation-and-normalized-events.md  11b-market-registry-and-universe-selection.md  11c-feed-manager-and-normalized-public-updates.md  11d-dynamic-subscription-diffs-and-feed-scaling.md  12-hot-state-and-quote-lifecycle.md  12a-hot-state-and-update-notices.md  12b-strategy-contracts-and-runtime-scaffolding.md  12c-order-manager-local-reconciliation.md  12d-exchange-sync-and-fill-exposure-seam.md  13-btc_5m_strategy_spec.md  13-low-risk-liquidity-rewards.md
src/: CMakeLists.txt  main.cpp
src/benchmark/: benchmark_runner.cpp  benchmark_runner.h
src/clock/: monotonic_clock.cpp  monotonic_clock.h
src/connection/: connection_pool.cpp  connection_pool.h  h2_session.cpp  h2_session.h  h3_stub.cpp  h3_stub.h  tcp_connector.cpp  tcp_connector.h  tls_session.cpp  tls_session.h
src/executor/: cpu_pin.cpp  cpu_pin.h  execution_thread.cpp  execution_thread.h  ingress_thread.cpp  ingress_thread.h  maintenance_thread.cpp  maintenance_thread.h
src/metrics/: stats_aggregator.cpp  stats_aggregator.h  timestamp_record.h
src/queue/: spsc_queue.h
src/request/: request_template.cpp  request_template.h
src/trigger/: trigger_message.h
tests/: CMakeLists.txt  test_address_family.cpp  test_benchmark_pop.cpp  test_benchmark_runner.cpp  test_benchmark_stats.cpp  test_connection_pool.cpp  test_deps.cpp  test_dual_connection.cpp  test_execution_thread.cpp  test_h2_session.cpp  test_h3_stub.cpp  test_ingress_thread.cpp  test_integration_pipeline.cpp  test_maintenance_thread.cpp  test_monotonic_clock.cpp  test_request_template.cpp  test_sanity.cpp  test_spsc_queue.cpp  test_stats_aggregator.cpp  test_tcp_connector.cpp  test_timestamp_record.cpp  test_tls_session.cpp  test_trigger_message.cpp
