add_executable(rtt_tests
    test_sanity.cpp
    test_deps.cpp
    test_monotonic_clock.cpp
    test_timestamp_record.cpp
    test_stats_aggregator.cpp
    test_spsc_queue.cpp
    test_trigger_message.cpp
    test_request_template.cpp
    test_tcp_connector.cpp
    test_tls_session.cpp
    test_h2_session.cpp
    test_connection_pool.cpp
)
target_link_libraries(rtt_tests
    GTest::gtest_main
    rtt_lib
)

include(GoogleTest)
gtest_discover_tests(rtt_tests)
