[package]
name = "pm-executor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pm-executor"
path = "src/main.rs"

[dependencies]
rtt-core = { path = "../rtt-core" }
pm-data = { path = "../pm-data" }
pm-strategy = { path = "../pm-strategy" }
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
alloy = { version = "1", default-features = false, features = ["signer-local", "signers"] }
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hyper = { version = "1", features = ["http1", "server"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.26", default-features = false, features = ["native-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
