[package]
name = "rtt-core"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http2", "tokio"] }
http = "1"
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "0.26"
crossbeam-channel = "0.5"
socket2 = { version = "0.5", features = ["all"] }
core_affinity = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
bytes = "1"
alloy = { version = "1", default-features = false, features = ["dyn-abi", "signer-local", "signers", "sol-types"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
